@@ -38,6 +38,8 @@ Core and Builtins
 Library
 -------
 
+- Issue #27294: Improved repr for Tkinter event objects.
+
 - Issue #20508: Improve exception message of IPv{4,6}Network.__getitem__.
   Patch by Gareth Rees.
 
